--- a/src/styles/shared/variables.css
+++ b/src/styles/shared/variables.css
@@ -53,10 +53,15 @@
 	--z-above-all: 1100;
 
 	/* Common Colors */
+	--color-shadow: rgb(0 0 0 / 0.18);
 	--color-error: #dc3545;
 	--color-success: #28a745;
 	--color-warning: #ffc107;
 	--color-info: #007bff;
 	--color-secondary: #6c757d;
 
+}
+
+[data-theme-mode="dark"] {
+	--color-shadow: rgb(255 255 255 / 0.18);
 }
